scripts/nullness/nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8.txt
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/KhovanovMapNode.java:30: error: [method.invocation] call to makeBasis() not allowed on the given receiver.
        makeBasis();
                 ^
  found   : @UnderInitialization(KhovanovMapNode.class) @NonNull KhovanovMapNode
  required: @Initialized @NonNull KhovanovMapNode
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/SeifertCircle.java:15: error: [method.invocation] call to findMinEdge() not allowed on the given receiver.
        this.minEdge = findMinEdge();
                                  ^
  found   : @UnderInitialization(SeifertCircle.class) @NonNull SeifertCircle
  required: @Initialized @NonNull SeifertCircle
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Tensor.java:19: error: [assignment] incompatible types in assignment.
        this.tensorProduct = b.toArray(this.tensorProduct);
                                      ^
  found   : @Initialized @Nullable BasisElement @Initialized @NonNull []
  required: @Initialized @NonNull BasisElement @Initialized @NonNull []
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Tensor.java:19: warning: [toarray.nullable.elements.not.newarray] call of toArray on collection of non-null elements yields an array of possibly-null elements; omit the argument to toArray or make it an explicit array constructor
        this.tensorProduct = b.toArray(this.tensorProduct);
                                      ^
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/DotsAndArrows.java:15: error: [method.invocation] call to fillRows() not allowed on the given receiver.
        fillRows();
                ^
  found   : @UnderInitialization(DotsAndArrows.class) @NonNull DotsAndArrows
  required: @Initialized @NonNull DotsAndArrows
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/DotsAndArrows.java:16: error: [method.invocation] call to fillArrows() not allowed on the given receiver.
        fillArrows();
                  ^
  found   : @UnderInitialization(DotsAndArrows.class) @NonNull DotsAndArrows
  required: @Initialized @NonNull DotsAndArrows
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/DotsAndArrows.java:17: error: [method.invocation] call to resolve() not allowed on the given receiver.
        resolve();
               ^
  found   : @UnderInitialization(DotsAndArrows.class) @NonNull DotsAndArrows
  required: @Initialized @NonNull DotsAndArrows
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/KhovanovMap.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: resolvedKnots, maps
    public KhovanovMap(Knot kn) {
           ^
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/KhovanovMap.java:26: error: [method.invocation] call to fillResolvedKnots(Knot) not allowed on the given receiver.
        fillResolvedKnots(this.theKnot);
                         ^
  found   : @UnderInitialization @NonNull KhovanovMap
  required: @Initialized @NonNull KhovanovMap
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/KhovanovMap.java:27: error: [method.invocation] call to setMaps() not allowed on the given receiver.
        setMaps();
               ^
  found   : @UnderInitialization @NonNull KhovanovMap
  required: @Initialized @NonNull KhovanovMap
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Knot.java:22: error: [initialization.fields.uninitialized] the constructor does not initialize fields: leftknot, rightknot, smoothing
    public Knot(Crossing[] c) {
           ^
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Knot.java:48: error: [method.invocation] call to makeCircles() not allowed on the given receiver.
        makeCircles();
                   ^
  found   : @UnderInitialization @NonNull Knot
  required: @Initialized @NonNull Knot
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Knot.java:51: error: [initialization.fields.uninitialized] the constructor does not initialize fields: leftknot, rightknot
    public Knot(Crossing[] c, String code, Smoothing l, Vertex[] v) {
           ^
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Knot.java:129: error: [method.invocation] call to makeCircles() not allowed on the given receiver.
        makeCircles();
                   ^
  found   : @UnderInitialization @NonNull Knot
  required: @Initialized @NonNull Knot
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Vertex.java:11: error: [initialization.fields.uninitialized] the constructor does not initialize fields: from, to
    public Vertex() {
           ^
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Vertex.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: from, to
    public Vertex(int n) {
           ^
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/MergeMap.java:18: error: [method.invocation] call to addTensorArrows() not allowed on the given receiver.
        addTensorArrows();
                       ^
  found   : @UnderInitialization(MergeMap.class) @NonNull MergeMap
  required: @Initialized @NonNull MergeMap
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/MergeMap.java:19: error: [method.invocation] call to toString() not allowed on the given receiver.
        System.out.println(toString());
                                   ^
  found   : @UnderInitialization(MergeMap.class) @NonNull MergeMap
  required: @Initialized @NonNull MergeMap
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Vplus.java:11: error: [method.invocation] call to findName() not allowed on the given receiver.
        this.name = findName();
                            ^
  found   : @UnderInitialization(Vplus.class) @NonNull Vplus
  required: @Initialized @NonNull Vplus
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Vplus.java:43: error: [override.param] Incompatible parameter type for v.
    public boolean equals(BasisElement v) {
                                       ^
  found   : @Initialized @NonNull BasisElement
  required: @Initialized @Nullable BasisElement
  Consequence: method in @Initialized @NonNull Vplus
    @Initialized @NonNull boolean equals(@Initialized @NonNull Vplus this, @Initialized @NonNull BasisElement p0)
  cannot override method in @Initialized @NonNull BasisElement
    @Initialized @NonNull boolean equals(@Initialized @NonNull BasisElement this, @Initialized @Nullable BasisElement p0)
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Vminus.java:11: error: [method.invocation] call to findName() not allowed on the given receiver.
        this.name = findName();
                            ^
  found   : @UnderInitialization(Vminus.class) @NonNull Vminus
  required: @Initialized @NonNull Vminus
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Vminus.java:43: error: [override.param] Incompatible parameter type for v.
    public boolean equals(BasisElement v) {
                                       ^
  found   : @Initialized @NonNull BasisElement
  required: @Initialized @Nullable BasisElement
  Consequence: method in @Initialized @NonNull Vminus
    @Initialized @NonNull boolean equals(@Initialized @NonNull Vminus this, @Initialized @NonNull BasisElement p0)
  cannot override method in @Initialized @NonNull BasisElement
    @Initialized @NonNull boolean equals(@Initialized @NonNull BasisElement this, @Initialized @Nullable BasisElement p0)
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/SplitMap.java:19: error: [method.invocation] call to addTensorArrows() not allowed on the given receiver.
        addTensorArrows();
                       ^
  found   : @UnderInitialization(SplitMap.class) @NonNull SplitMap
  required: @Initialized @NonNull SplitMap
../nullgtn/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/SplitMap.java:20: error: [method.invocation] call to toString() not allowed on the given receiver.
        System.out.println(toString());
                                   ^
  found   : @UnderInitialization(SplitMap.class) @NonNull SplitMap
  required: @Initialized @NonNull SplitMap
23 errors
1 warning
